# homework

./: build.sh  compare12.sh  optimization.sh  pa1  pa1.c  pa1_1.c  pa1_2.c  show_figure.ipynb  submit.sh
archive/: output2.txt  pa1_1.c
comp790-58/: CMakeLists.txt  Makefile  log.html  prm.cpp  readme.txt  results.txt  segmentDist.cpp  test.sh
comp790-58/Exe/: bottleneck.xml  segmentDist
comp790-58/Exe/bottleneck/: bottleneckV.xml
comp790-58/archive/: segmentDist.cpp
comp790-58/hw1/: CMakeCache.txt  Makefile  cmake_install.cmake  log.html  show.sh  test.ipynb
comp790-58/hw1/Exe/: segmentDist  testSceneFile.xml  tradeshow.xml
comp790-58/hw1/Exe/bottleneck/: bottleneckB.xml  orgin.txt  roadmap-500.txt  roadmap.txt  roadmap_10000.txt  roadmap_5000.txt
comp790-58/hw1/Exe/tradeshow/: tradeshow.nav  tradeshowS.xml  tradeshowV.xml
comp790-58/hw1/build-navigation-Desktop_Qt_5_7_0_GCC_64bit-Default/: CMakeCache.txt  Makefile  SEGMENT_DIST.cbp  cmake_install.cmake  navigation.cbp
comp790-58/hw1/build-navigation-Desktop_Qt_5_7_0_GCC_64bit-Default/tinyxml/: Makefile  cmake_install.cmake  tinyxml.cbp
comp790-58/hw1/navigation/: CMakeLists.txt  segmentDist.cpp
comp790-58/hw1/navigation/Exe/: segmentDist
comp790-58/hw2/: Untitled.ipynb  hw2.ipynb  test.ipynb  util.py
comp790-58/hw2/.ipynb_checkpoints/: hw2-checkpoint.ipynb  test-checkpoint.ipynb
comp790-58/project/: train.mkv
comp790-58/submission/Exe/: bottleneck.xml
comp790-58/submission/navigation/: main.cpp  segmentDist.cpp  segmentdist.h
comp790-58/tinyxml/: Makefile  cmake_install.cmake
(+60 files in other folders)
